--- a/MTeleportation/MTeleportation.csproj
+++ b/MTeleportation/MTeleportation.csproj
@@ -39,6 +39,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Melody\source\repos\Libs\com.rlabrecque.steamworks.net.dll</HintPath>
     </Reference>
+    <Reference Include="MAllies">
+      <HintPath>..\..\..\Libs\MAllies.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\libs\Newtonsoft.Json.dll</HintPath>
